--- a/XAI/Base.lproj/Main_iPhone35.storyboard
+++ b/XAI/Base.lproj/Main_iPhone35.storyboard
@@ -34,10 +34,11 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rin-An-rYW">
-                                <rect key="frame" x="194" y="414" width="30" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rin-An-rYW">
+                                <rect key="frame" x="0.0" y="328" width="402" height="78"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="登陆">
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" image="login_btn_normal.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -298,13 +299,18 @@
                             <outlet property="delegate" destination="JsJ-oD-swf" id="8Mw-0q-IT9"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="管理" id="0AI-qS-vE2"/>
+                    <tabBarItem key="tabBarItem" title="管理" id="0AI-qS-vE2">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="100" vertical="-20"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PwV-4B-AHu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="706" y="886"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="login_btn_normal.png" width="201" height="39"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
