--- a/XAI/Base.lproj/Main_iPhone.storyboard
+++ b/XAI/Base.lproj/Main_iPhone.storyboard
@@ -174,9 +174,21 @@
             <objects>
                 <navigationController definesPresentationContext="YES" id="QuC-yI-1aM" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="设备" image="tab_bar_dev_nor.png" id="quK-ii-YKl"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rbL-S5-IYV">
+                    <navigationBar key="navigationBar" opaque="NO" contentMode="scaleAspectFit" translucent="NO" id="rbL-S5-IYV">
+                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.96078431372549022" green="0.45490196078431372" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="textShadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <offsetWrapper key="textShadowOffset" horizontal="0.0" vertical="0.0"/>
+                        </textAttributes>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="G0w-6p-l9U">
+                        <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="TPD-h2-bC8" kind="relationship" relationship="rootViewController" id="5zg-QF-fFT"/>
                     </connections>
@@ -185,17 +197,17 @@
             </objects>
             <point key="canvasLocation" x="380" y="-1144"/>
         </scene>
-        <!--Device ShowVC - 设备-->
+        <!--Device ShowVC - 设备列表-->
         <scene sceneID="unk-bG-xvQ">
             <objects>
                 <viewController id="TPD-h2-bC8" customClass="DeviceShowVC" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="jfo-DO-e9Y">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="639" verticalCompressionResistancePriority="832" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="jfo-DO-e9Y">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.051221787019999999" blue="0.11104044439999999" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DeviceShowCellIdentifier" rowHeight="68" id="DZY-Pk-qSC" customClass="DeviceShowCell">
-                                <rect key="frame" x="0.0" y="86" width="320" height="68"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="68"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DZY-Pk-qSC" id="p7F-rp-4fa">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
@@ -234,7 +246,7 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="设备" id="tHS-7I-tJ7"/>
-                    <navigationItem key="navigationItem" id="QJg-jY-IkF"/>
+                    <navigationItem key="navigationItem" title="设备列表" id="QJg-jY-IkF"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MKb-is-auv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -245,11 +257,10 @@
             <objects>
                 <tabBarController storyboardIdentifier="XAIMainPage" definesPresentationContext="YES" id="L54-r1-Z8p" customClass="XAITabBarVC" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" restorationIdentifier="XAI_TAB_BAR" id="hq2-Yd-Ewy">
+                    <tabBar key="tabBar" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" restorationIdentifier="XAI_TAB_BAR" selectionIndicatorImage="tab_bar_selected.png" id="hq2-Yd-Ewy">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
                         <outlet property="xaitabBar" destination="hq2-Yd-Ewy" id="pDL-gn-jjq"/>
@@ -378,6 +389,7 @@
         <image name="qrcode_btn_nor.png" width="25" height="25"/>
         <image name="tab_bar_devM_nor.png" width="54" height="50"/>
         <image name="tab_bar_dev_nor.png" width="54" height="50"/>
+        <image name="tab_bar_selected.png" width="81" height="54"/>
         <image name="tab_bar_set_nor.png" width="54" height="50"/>
         <image name="tab_bar_user_nor.png" width="54" height="50"/>
         <image name="textField_bg.png" width="200" height="30"/>
